# FederatedLearningMultiplicity

./: .gitignore  README.md  centralized_evaluate.py  gitignore  main.py  multiplicity_evaluate.py  pyproject.toml  rashomon_cap_test.py  requirements.txt  run_dutch.py  run_dutch_multiplicity.py  run_income.py  run_income_multiplicity.py  run_mnist.py  run_mnist_multiplicity.py
Aggregations/: aggregations.py
Client/: client.py  evaluation_client.py
ClientManager/: client_manager.py
Datasets/: abalone.py  celeba.py  dataset_utils.py  dutch.py  income.py  mnist.py
Models/: architectures.py  model.py  regression_model.py  simple_model.py  utils.py
Server/: evaluation_server.py  server.py
Strategy/: custom_evaluation.py  fed_avg.py
Utils/: multiplicity_evaluation.py  preferences.py  utils.py
data/dutch/: dutch.csv
data/income_reduced/0/: test_CA.csv  train_CA.csv
data/income_reduced/1/: train_CO.csv
data/income_reduced/10/: test_NM.csv  train_NM.csv
data/income_reduced/11/: test_PA.csv
data/income_reduced/12/: test_RI.csv  train_RI.csv
examples/abalone/: abalone_cross_silo_iid.yaml  run_sweep.sh
examples/dutch/: dutch_cross_device_NON_iid.yaml  dutch_cross_device_iid.yaml  dutch_cross_silo_NON_iid.yaml  dutch_cross_silo_iid.yaml  run.sh  run_sweep.sh
examples/income/: income_cross_silo_NON_iid.yaml  income_cross_silo_iid.yaml  run_sweep.sh
examples/mnist/: mnist_cross_device_NON_iid.yaml  mnist_cross_device_iid.yaml  mnist_cross_silo_NON_iid.yaml  mnist_cross_silo_iid.yaml  run_sweep.sh
plots/: download_data.py  plots.ipynb
(+32 files in other folders)
